--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,7 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
 
     # Add user defined libraries
 )
+
+# Adding freertos to project
+include(${CMAKE_SOURCE_DIR}/cmake/freertos.cmake)
+add_freertos_library(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/Config)
