--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,13 +60,14 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
 # Remove wrong libob.a library dependency when using cpp files
 list(REMOVE_ITEM CMAKE_C_IMPLICIT_LINK_LIBRARIES ob)
 
+# Adding subdirectories
+add_subdirectory(Config)
+add_subdirectory(Tasks)
+add_subdirectory(App)
+
 # Add linked libraries
 target_link_libraries(${CMAKE_PROJECT_NAME}
     stm32cubemx
-
     # Add user defined libraries
+    App
 )
-
-# Adding freertos to project
-include(${CMAKE_SOURCE_DIR}/cmake/freertos.cmake)
-add_freertos_library(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/Config)
