--- a/Config/CMakeLists.txt
+++ b/Config/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(Config INTERFACE)
+add_library(config INTERFACE)
 
-target_include_directories(Config INTERFACE
+target_include_directories(config INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
